                POST   /subnets/{id}/first_subnet/{mask}/     // creates first free subnet under master with specified mask
                DELETE /subnets/{id}/permissions/             // removes permissions
                PATCH  /subnets/{id}/permissions/             // sets subnet permissions (?grouname1=ro&groupname2=3&43=1)
        + New controller Prefix;
        + New subcontrollers:
            + /tools/nat/
            + /tools/racks/
            + /tools/locations/
    + Widgets:
        + New threshold widget;
        + New inactive hosts widget;
        + New Locations widget;
    + PowerDNS:
        + Default domain for PTR records (if hostname is not set);
        + When removing IP address additional option that removes all associated PDNS records (ip and hostname);
    + Permit normal users to manage VLANs / VRFs;
    + Inactive (offline) hosts tools page;
    + MAC address normalization;
    + jQuery tables;
    + Permission delegation now only delegates changes not whole permission set;
    + Users with RWA permission can manage IP requests and receive IP request mails + changelog mails for subnet;
    + IPv4 subnet link to IPv6 for dual-stack info;
    + Removed inacessible DNS servers if timeout to prevent page load timeouts;
    + Added option to only show supernets to limit pageload [#844 #816 #736];
    + Added last scan info to subnet details;
    + Added option to update address tags when address state change occurs (pingCheck) [#840];
    + Added mantaneance mode;
    + Added inactive addresses removal script;
    + Subnet overlapping now checked also inside folders to prevernt duplicates;
    + Subnet overlapping now checked also between sections if VRF defined;
    + Added new settings directive that requires unique subnets accross sections;
    + Added index check in verify database to detect and fix possible missing DB indexes;
    + Added MAC address vendor display option;

    Bugfixes:
    ----------------------------